@@ -28,6 +28,7 @@ Andreas Schiefer
 Peter Shinners
 Nathan Stocks
 Martin Di Paola
+Walter Woods
 
 pyglet/window/win32/constants.py is derived from Python for Windows
 Extensions.  Copyright 1994-2001 Mark Hammond.
